--- a/.gitignore
+++ b/.gitignore
@@ -475,3 +475,16 @@ MigrationBackup/
 src/rsc/
 
 src/settings.py
+
+# Django #
+
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
+
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
